--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,11 @@ jobs:
     - name: Install MkDocs
       run: pip install mkdocs mkdocs-material
 
+    - name: Configure Git user
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+
     - name: Deploy to GitHub Pages
       run: mkdocs gh-deploy --force
       env:
